compiler/test/fail_compilation/imports/unused_import2.d
module unused_import2;

int b;
enum c = 7;
